# COBOLDocPro

./: .replit  package-lock.json  package.json  replit.md  tailwind.config.ts  vite.config.ts
attached_assets/: Pasted--Building-the-best-COBOL-documentation-tool-a-practical-blueprint-What-best-means-for-COBO-1754721030560_1754721030561.txt  Pasted--Create-a-Modern-Documentation-Management-Application-Build-a-sophisticated-documentation-manage-1754886648204_1754886648205.txt  Pasted--type-message-role-assistant-content-type-thinking--1748630027178.txt  Pasted-Application-Understanding-Discovery-Title-Portfolio-Ingestion-Repository-description-Ingests-1754713487387_1754713487387.txt  Pasted-I-ll-analyze-both-COBOL-parsing-tools-to-help-you-determine-which-would-be-better-for-a-COBOL-docume-1754716688381_1754716688382.txt  Pasted-Okay-here-s-a-deep-analysis-and-description-of-a-standalone-COBOL-documentation-platform-designed-t-1748558341315.txt  Pasted-Phase-1-Static-Analysis-Foundation-The-foundation-phase-should-establish-comprehensive-code-unders-1754716869714_1754716869715.txt  Pasted-You-are-an-AI-software-engineer-tasked-with-designing-and-implementing-a-new-application-The-applic-1754712419405_1754712419407.txt  QUICK_START.md  SETUP_GUIDE.md  agent_fixed.py  content-1754716244626.md  package-lock.json  pyproject.toml
client/: index.html
docs/: BACKEND_ARCHITECTURE.md  ENTERPRISE_FUNCTIONALITY_COMPLETED.md  FUNCTIONALITY_ANALYSIS.md  TECHNICAL_SPECIFICATION.md
server/: ai-documentation-generator.ts  ai-documentation-routes.ts  analysis-engine.ts  coco-llm.ts  (+30 more)
(+105 files in other folders)
